# EKIP

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_FIXES_SUMMARY.md  Makefile  README.md  RENDER_DEPLOYMENT_CHECKLIST.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  README.md  main.py  pyproject.toml  start.sh
backend/app/: __init__.py
backend/app/agents/: __init__.py  graph.py  state.py
backend/app/agents/ingestion/: __init__.py  agent.py  parsers.py
backend/app/agents/knowledge_graph/: __init__.py  agent.py  prompts.py  queries.py
backend/app/agents/reasoning/: __init__.py  agent.py  prompts.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  constants.py  exceptions.py  logging.py
backend/app/db/: neo4j.py  qdrant.py  session.py  supabase.py
backend/app/llm/: base.py  embeddings.py  factory.py  gemini.py  groq.py
backend/app/middleware/: api_keys.py  cors.py  logging.py  rate_limit.py
backend/app/schemas/: auth.py  chat.py  common.py  document.py  knowledge.py  query.py
backend/app/services/: admin_service.py  auth_service.py  chat_service.py  document_service.py  query_service.py
backend/data/: ekip_graph.json
backend/data/qdrant/: meta.json
backend/seeds/: manifest.json  seed_all.py
backend/seeds/data/: api-gateway-readme.md  architecture-overview.md  auth-service-readme.md  data-pipeline-service-readme.md  ml-inference-service-readme.md  user-service-readme.md
backend/seeds/demo/: generate_demo_files.py  sample.docx  sample.md  sample.pptx  sample.txt
(+42 files in other folders)
