[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "ekip-backend"
version = "1.0.0"
description = "Enterprise Knowledge Intelligence Platform Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "qdrant-client>=1.12.0",
    "neo4j>=5.25.0",
    "supabase>=2.10.0",
    "python-multipart>=0.0.12",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "python-docx>=1.1.0",
    "pypdf>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.7",
    "tiktoken>=0.8.0",
    "fastembed>=0.4.0",
    "slowapi>=0.1.9",
    "unstructured[docx,pptx]>=0.15.0",
    "python-pptx>=0.6.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "ragas>=0.1.0",
    "deepeval>=0.21.0",
]
eval = [
    "ragas>=0.1.0",
    "deepeval>=0.21.0",
]
